; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_descriptor.c_arraydescr_newbyteorder.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_descriptor.c_arraydescr_newbyteorder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NPY_SWAP = common dso_local global i8 0, align 1
@.str = private unnamed_addr constant [17 x i8] c"|O&:newbyteorder\00", align 1
@PyArray_ByteorderConverter = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @arraydescr_newbyteorder to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @arraydescr_newbyteorder(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8, align 1
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i8, i8* @NPY_SWAP, align 1
  store i8 %7, i8* %6, align 1
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* @PyArray_ByteorderConverter, align 4
  %10 = call i32 @PyArg_ParseTuple(i32* %8, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %9, i8* %6)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %18

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load i8, i8* %6, align 1
  %16 = call i64 @PyArray_DescrNewByteorder(i32* %14, i8 signext %15)
  %17 = inttoptr i64 %16 to i32*
  store i32* %17, i32** %3, align 8
  br label %18

18:                                               ; preds = %13, %12
  %19 = load i32*, i32** %3, align 8
  ret i32* %19
}

declare dso_local i32 @PyArg_ParseTuple(i32*, i8*, i32, i8*) #1

declare dso_local i64 @PyArray_DescrNewByteorder(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
